# OCC-CSG

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  THIRDPARTY-LICENSES  appveyor.yml  configure.ps1  vcpkg.json
cmake/: CreateExecutable.cmake  CreateLibrary.cmake
resources/: stlcreator01.vrlp
src/: CMakeLists.txt  occ-csg.cpp
test-suite/: Test.java
